fix: update x/y margin reset and dark mode query

--- a/assets/scss/ui/_vars.scss
+++ b/assets/scss/ui/_vars.scss
@@ -16,7 +16,7 @@
     --ac-1: #679CD0;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
     :root {
         --bg-1: #cccccc;
         --bg-2: #b8b8b8;
